Code change properties files

--- a/src/test/resources/config_uat.properties
+++ b/src/test/resources/config_uat.properties
@@ -2,5 +2,13 @@
 
 
 baseurl.gorest= https://gorest.uat.co.in
-
+baseurl.gorest = https://gorest.uat.co.in
+baseurl.contacts = https://thinking-tester-contact-list.herokuapp.uat.com
+baseurl.reqres = https://reqres.uat.in
+baseurl.basic_auth =https://the-internet.herokuapp.uat.com
+baseurl.products = https://fakestoreapi.uat.com
+baseurl.oauth2_amadeus = https://test.api.amadeus.uat.com
+baseurl.oauth2_spotify = https://accounts.spotify.uat.com
+baseurl.albums_spotify = https://api.spotify.uat.com
+baseurl.ergast_circuit = http://ergast.uat.com
 
